# jsonFilms

./: CMakeLists.txt  README.md  READMI.RU.txt  createFile.cpp  description.txt  main.cpp  readmi.txt  searchActors.cpp  task2.cpp
film/: avengers.json  back_to_the_future.json  dune.json  iron_man.json  main_character.json  name_Film.json
